--- a/src/css/customh.css
+++ b/src/css/customh.css
@@ -49,7 +49,7 @@ body{
     font-size: x-large;
     max-width: 100%;
     position: relative;
-    
+    text-shadow: 3px 3px 4px rgb(232, 185, 255);
 }
 
 @media (hover: none) {
